--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,14 @@
   "author": "sharon",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/dialogflow": "^6.7.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dialogflow": "^1.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.0",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "uuid": "^10.0.0"
   }
 }
